About page link added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <!-- Add your code here, between the body tags. -->
     <a href="https://www.youtube.com/watch?v=p_27YcR9k94" target="_blank">Press!</a>
+    <a href="./about.html">About Me!</a>
   </body>
 </html>
