--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <!-- Add your code here, between the body tags. -->
-    <a href="https://www.youtube.com/watch?v=p_27YcR9k94" target="_blank">Press!</a>
-    <a href="./about.html">About Me!</a>
+    <a href="https://www.youtube.com/watch?v=p_27YcR9k94" target="_blank">Press!</a><br>
+    <a href="./about.html">About Me!</a><br>
+    <a href="./welcome.html"><img src="https://www.gannett-cdn.com/presto/2018/09/24/PCHH/59a3b3c0-2f08-4eca-86ec-1eca12f14911-Gritty.jpg?width=1200&disable=upscale&format=pjpg&auto=webp" alt="Gritty in the void" height="200%"/></a>
   </body>
 </html>
