Added same page link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <!-- Add your code here, between the body tags. -->
+    <h1 id="top"> Gritty Fan Blog</h1>
     <a href="https://www.youtube.com/watch?v=p_27YcR9k94" target="_blank">Press!</a><br>
     <a href="./about.html">About Me!</a><br>
-    <a href="./welcome.html"><img src="https://www.gannett-cdn.com/presto/2018/09/24/PCHH/59a3b3c0-2f08-4eca-86ec-1eca12f14911-Gritty.jpg?width=1200&disable=upscale&format=pjpg&auto=webp" alt="Gritty in the void" height="200%"/></a>
+    <a href="./welcome.html"><img src="https://www.gannett-cdn.com/presto/2018/09/24/PCHH/59a3b3c0-2f08-4eca-86ec-1eca12f14911-Gritty.jpg?width=1200&disable=upscale&format=pjpg&auto=webp" alt="Gritty in the void" height="200%"/></a><br>
+    <a href="#top">Go to top</a>
   </body>
 </html>
